# epll

./: CMakeLists.txt  README.md  README.txt
cmake/modules/: FindCBLAS.cmake
data/: testBW (1).tif  testBW (10).tif  testBW (2).tif  testBW (3).tif  testBW (5).tif  testBW (9).tif  testBW_3.tif  testBW_5.tif  testBW_6.tif  testBW_7.tif
models/: w_color_homemade.txt  w_gs_homemade.txt
src/: CMakeLists.txt  compute_psnr.cpp  compute_results.cpp  denoising_multiscale.sh  main_epll.cpp
src/EPLL/: .LibMatrix.cpp.swp  CMakeLists.txt  LibImages.cpp  LibImages.h  LibMatrix.cpp  LibMatrix.h  epll.cpp  epll.h
src/Utilities/: .LibImages.cpp.swp  .LibImages.h.swp  .LibVideoT.hpp.swp  LibImages.cpp  LibImages.h  LibVideoT.hpp  Utilities.cpp  Utilities.h
src/models/: w.txt
